# uh

./: README.md  main_old.py  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: deploy.yml
backend/: adi_pipeline.py  main.py
backend/output/json/: regions.json
client/: requirements.md
client/src/: App.tsx  index.css
client/src/components/: AdiMap.tsx  Layout.tsx  MetricCard.tsx
client/src/hooks/: use-adi-data.ts  use-mobile.tsx  use-toast.ts
client/src/lib/: queryClient.ts
client/src/pages/: Home.tsx  MapPage.tsx  Patterns.tsx  RegionProfile.tsx  not-found.tsx
server/: index.ts  routes.ts  static.ts
shared/: routes.ts  schema.ts
